implements estudios endpoints solve